[package]
name = "ironsnake"
version = "0.1.0"
authors = ["mattswoon <mattswoon.github.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_bits"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.10.1", features = ["extension-module"] }
