[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["mattswoon <mattswoon.github.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
setuptools-rust = "^0.10.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
